# zathura-plugin

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: document.rs  error.rs  lib.rs  page.rs
zathura-plugin-sys/: Cargo.toml  README.md  build.rs  wrapper.h
zathura-plugin-sys/headers/: .gitattributes  zathura-version.h
zathura-plugin-sys/headers/girara/: girara-version.h
zathura-plugin-sys/src/: lib.rs
