[package]
name = "zathura-plugin"
version = "0.4.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
edition = "2018"
description = "Idiomatic wrapper around Zathura's Plugin interface"
documentation = "https://docs.rs/zathura-plugin/"
repository = "https://github.com/jonas-schievink/zathura-plugin.git"
keywords = ["zathura", "pdf", "document", "reader", "viewer"]
categories = ["api-bindings"]
readme = "README.md"
license = "0BSD"


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'zathura-plugin = "[a-z0-9\\.-]+"'
replace = 'zathura-plugin = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/zathura-plugin/[a-z0-9\\.-]+"
replace = "https://docs.rs/zathura-plugin/{{version}}"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zathura-plugin-sys = { path = "zathura-plugin-sys", version = "0.2.0" }
cairo-sys-rs = "0.9.0"
cairo-rs = { version = "0.7.0", features = ["v1_14"] }
pkg-version = "1.0.0"

[dev-dependencies]
version-sync = "0.9"

[workspace]

[features]
# Includes a test plugin in the build cdylib that can be loaded into Zathura
testplugin = []
