[package]
name = "zathura-plugin-sys"
version = "0.2.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
edition = "2018"
description = "FFI bindings for Zathura's Plugin API"
documentation = "https://docs.rs/zathura-plugin-sys/"
repository = "https://github.com/jonas-schievink/zathura-plugin.git"
keywords = ["zathura", "pdf", "document", "reader", "viewer"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "0BSD"
links = "zathura"
build = "build.rs"

[build-dependencies]
bindgen = "0.51.0"
pkg-config = "0.3.14"
